--- a/schedule.html
+++ b/schedule.html
@@ -108,18 +108,20 @@
                                 class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">12:00 - 13:30</p>
-                            <p class="font-medium text-white">Lunch Break</p>
-                        </div>
-                        <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">13:30 - 14:20</p>
+                            <p class="text-lg font-semibold text-yellow-400">12:00 - 12:40</p>
                             <p class="font-medium text-white">Malwares & EDRs</p>
                             <p class="text-sm text-gray-300">José Luiz</p>
                             <a href="speakers/jose-luiz.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View
                                 details</a>
+                            
                         </div>
                         <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">14:20 - 15:10</p>
+                            <p class="text-lg font-semibold text-yellow-400">12:40 - 14:00</p>
+                            <p class="font-medium text-white">Lunch Break</p>
+                            
+                        </div>
+                        <div class="border-b border-gray-600 pb-4">
+                            <p class="text-lg font-semibold text-yellow-400">14:00 - 14:40</p>
                             <p class="font-medium text-white">An approach of FBP for rapid development of offensive
                                 security tools</p>
                             <p class="text-sm text-gray-300">Heitor Gouvêa</p>
@@ -127,25 +129,21 @@
                                 class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">15:10 - 16:00</p>
+                            <p class="text-lg font-semibold text-yellow-400">14:40 - 15:30</p>
                             <p class="font-medium text-white">The Darkside of the Moon - How to Really Think About Anti
                                 Forensic</p>
                             <p class="text-sm text-gray-300">Iago Blambila</p>
                             <a href="speakers/iago-blambila.html"
                                 class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
-                        <!-- <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">16:00 - 16:50</p>
-                        <p class="font-medium text-white">Extensões malvadas: entendendo e se defendendo das brechas de segurança no VS Code</p>
-                        <p class="text-sm text-gray-300">Bruno Dantas</p>
-                        <a href="speakers/bruno-dantas.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
-                    </div> -->
                         <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">16:00 - 16:50</p>
-                            <p class="font-medium text-white">TBA (To be announced)</p>
+                            <p class="text-lg font-semibold text-yellow-400">15:30 - 16:10</p>
+                            <p class="font-medium text-white">Anatomia de um mini-AS: explorando fragmentos da infraestrutura global da internet</p>
+                            <p class="text-sm text-gray-300">Rodrigo Ferreira</p>
+                            <a href="speakers/rodrigo-ferreira.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">16:50 - 17:40</p>
+                            <p class="text-lg font-semibold text-yellow-400">16:10 - 16:50</p>
                             <p class="font-medium text-white">Inception — Tips and tricks I've learned reversing
                                 vulnerabilities!</p>
                             <p class="text-sm text-gray-300">Nelson Brito</p>
