--- a/speakers/abid-lohan.html
+++ b/speakers/abid-lohan.html
@@ -77,25 +77,21 @@
                             class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Abid Lohan</h1>
-                    <p class="text-xl text-yellow-400">Security Researcher</p>
                 </div>
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Game Hacking: do Zero ao Kernel</h2>
                     <p class="text-lg text-white mb-4">10:20 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma jornada completa pelo mundo do Game Hacking, desde conceitos básicos até
-                            manipulações avançadas em nível de kernel. A palestra abordará técnicas de manipulação de
-                            memória, ponteiros e aspectos fundamentais de segurança em jogos.</p>
+                        <p class="mb-6">Nesta palestra, exploraremos o universo do game hacking, começando com conceitos básicos de engenharia reversa até a criação de cheats avançados em nível de kernel. Você aprenderá sobre as ferramentas e técnicas usadas para analisar jogos, manipular memória, desenvolver e testar trapaças que burlam os anticheats, com ênfase na parte técnica de tudo.</p>
                     </div>
                 </div>
 
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Abid Lohan</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Abid Lohan é um pesquisador de segurança especializado em sistemas embarcados e
-                            IoT. Com vasta experiência em pentest e análise de vulnerabilidades, tem contribuído
-                            significativamente para a comunidade de segurança através de suas pesquisas e descobertas.
+                        <p class="mb-6">Abid Lohan é um Estudante de Ciência da Computação na Universidade Federal do Rio de Janeiro (UFRJ), atuando na área de segurança ofensiva como membro do Red Team da Oplium. Também faz parte do GRIS (Grupo de Resposta a Incidentes de Segurança), onde colabora em atividades de pesquisa, ensino e competições.
+                            Atualmente, desenvolvendo seu Trabalho de Conclusão de Curso (TCC) em Game Hacking, com foco em manipulação de memória em nível kernel. Além disso, possui experiência significativa em Capture The Flag (CTF), com diversas premiações e contribuições para a comunidade. Entre suas conquistas, destaca-se o prêmio de melhor challenge submetido para a BSides SP 2024. Como competidor, obteve o 2º lugar na BSides SP 2024 (com o GRIS) e no CTF Hackers do Bem 2024 (individual). Também esteve envolvido na organização do CTF da H2HC 2023, contribuindo para a elaboração dos desafios e infraestrutura do evento.
                         </p>
                     </div>
                 </div>
