--- a/speakers/bruno-dantas.html
+++ b/speakers/bruno-dantas.html
@@ -77,7 +77,6 @@
                             class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Bruno Dantas</h1>
-                    <p class="text-xl text-yellow-400">bruno.dantas.net@gmail.com</p>
                 </div>
 
                 <div class="mb-12">
@@ -85,8 +84,7 @@
                         das brechas de segurança no VS Code</h2>
                     <p class="text-lg text-white mb-4">12:10 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma análise detalhada das vulnerabilidades de segurança em extensões do VS Code,
-                            incluindo demonstrações práticas de possíveis ataques e estratégias de defesa.</p>
+                        <p class="mb-6">O vscode em 2024 é o editor preferido dos programadores para escrever código. Após quase 10 anos do seu lancamento em 2015, se observa um ecossistema entorno dessa ferramenta, fomentado pela Microsoft, com atuação ativa da comunidade open-source, principalmente no desenvolvimento de extensões. Porém essa ampla adoção trouxe riscos para quem confia cegamente no que está baixando. Vamos entender quais são esses riscos e como podemos nos defender das ameaças.</p>
                     </div>
                 </div>
 
