--- a/speakers/fernando-merces.html
+++ b/speakers/fernando-merces.html
@@ -78,7 +78,6 @@
                             onerror="this.src='../images/speakers/default-avatar.png'">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Fernando Mercês</h1>
-                    <p class="text-xl text-yellow-400">Senior Security Researcher</p>
                 </div>
 
                 <div class="mb-12">
@@ -86,21 +85,19 @@
                         segurança</h2>
                     <p class="text-lg text-white mb-4">09:30 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Fernando Mercês compartilha suas experiências e aprendizados ao longo de uma
-                            década como pesquisador de segurança da informação, destacando os principais desafios,
-                            descobertas e tendências observadas no campo da cibersegurança.</p>
-                    </div>
-                </div>
+                        <p class="mb-6">
+                            Fernando Mercês compartilha suas experiências e aprendizados ao longo de uma vida como 
+                            Pesquisador Sênior de Ameaças no time Forward-Looking Threat Research (FTR) da Trend Micro [1], 
+                            onde utiliza engenharia reversa e técnicas de inteligência de ameaças na investigação de 
+                            crimes cibernéticos e ataques avançados patrocinados por Estados. Criador de várias ferramentas livres na área [2], 
+                            com frequência apresenta suas pesquisas nos principais eventos de segurança no Brasil e no exterior. 
+                            É também professor e diretor executivo na Mente Binária [3], uma ONG de ensino e pesquisa comprometida 
+                            com o ensino de computação no Brasil.
 
-                <div>
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Sobre Fernando Mercês</h2>
-                    <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Fernando Mercês é um renomado pesquisador de segurança com mais de uma década de
-                            experiência na área. Atualmente, atua como Senior Security Researcher na Trend Micro, onde
-                            lidera pesquisas em malware e ameaças cibernéticas.</p>
-                        <p class="mb-6">Com uma sólida formação acadêmica e vasta experiência prática, Fernando tem
-                            contribuído significativamente para a comunidade de segurança através de suas pesquisas,
-                            palestras e publicações técnicas.</p>
+                            [1] https://www.trendmicro.com
+                            [2] https://github.com/merces
+                            [3] https://www.mentebinaria.com.br/
+                        </p>
                     </div>
                 </div>
             </div>
