--- a/speakers/heitor-gouvea.html
+++ b/speakers/heitor-gouvea.html
@@ -72,7 +72,6 @@
                         <img src="../images/speakers/heitor-gouvea.jpeg" alt="Heitor Gouvea" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Heitor Gouvea</h1>
-                    <p class="text-xl text-yellow-400">Security Researcher & Red Team Lead</p>
                 </div>
 
                 <div class="mb-12">
@@ -84,17 +83,17 @@
                 </div>
 
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Explorando Vulnerabilidades em APIs Modernas</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">An approach of FBP for rapid development of offensive security tools</h2>
                     <p class="text-lg text-white mb-4">14:20 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma análise profunda sobre técnicas avançadas de exploração de vulnerabilidades em APIs modernas, incluindo demonstrações práticas e metodologias de teste.</p>
+                        <p class="mb-6"></p>
                     </div>
                 </div>
 
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Heitor Gouvea</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Heitor Gouvea é um pesquisador de segurança e líder de Red Team com vasta experiência em testes de penetração e análise de vulnerabilidades. Tem contribuído ativamente para a comunidade de segurança através de suas pesquisas e descobertas em segurança de APIs.</p>
+                        <p class="mb-6">Heitor Gouvea Pesquisador Independente de Segurança com background em Engenharia de Software, focado na descoberta de vulnerabilidades e desenvolvimento de exploits.</p>
                     </div>
                 </div>
             </div>
