--- a/speakers/jefferson-macedo.html
+++ b/speakers/jefferson-macedo.html
@@ -72,29 +72,24 @@
             <div class="max-w-4xl mx-auto bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
                 <div class="text-center mb-12">
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
-                        <img src="../images/speakers/iago-blambila.png" alt="Iago Blambila"
+                        <img src="../images/speakers/jefferson-macedo.png" alt="Jefferson Macedo"
                             class="w-full h-full object-cover">
                     </div>
-                    <h1 class="text-4xl font-bold text-white mb-2">Iago Blambila (@k0h4d0)</h1>
+                    <h1 class="text-4xl font-bold text-white mb-2">Jefferson Macedo</h1>
                 </div>
+
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">The Darkside of the Moon - How to Really Think
-                        About Anti Forensic</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Persistência via Cloudf̶l̶a̶r̶e̶: Anatomia de um Ataque do Ransomware Akira</h2>
                     <p class="text-lg text-white mb-4">15:10 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">How thinking about anti-forensics can really help a pentest or red team.
-                            - Understanding the technical concepts in forensic analysis to facilitate the compromise of the environment
-                            - Manipulation of artifacts and their traceability
-                            - Developing skills and techniques
-                            - Some examples of visibility in Activitycache.db, leak data, Lnks, Registry, etc.
-                            - How to improve forensic and pentest professionals and services.</p>
+                        <p class="mb-6">Nesta sessão, apresentarei os detalhes de um incidente real causado por um dos grupos de ransomware mais temidos, destacando uma técnica de persistência até então pouco documentada: o uso de um provedor de CDN para manter o controle do ambiente comprometido. Compartilharei lições práticas a partir da resposta ao incidente e métodos para detectar e mitigar essa ameaça, bem como fortalecer a segurança contra ataques avançados como esses.</p>
                     </div>
                 </div>
 
                 <div>
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Iago Blambila (@k0h4d0)</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Jefferson Macedo</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6"></p>
+                        <p class="mb-6">Jefferson Macedo tem +15 anos de experiência em tecnologia e segurança. Ele é fundador da PurpleBird Security, instrutor certificado pelo EC-Council e docente na FIAP. Atuou na liderança de times de resposta a incidentes e serviços de segurança na Capgemini, IBM (X-Force Incident Response) e Kroll Associates. Possui formação em Sistemas de Informação e Direito, com pós-graduação em Computação Forense.</p>
                     </div>
                 </div>
             </div>
