--- a/speakers/jose-luiz.html
+++ b/speakers/jose-luiz.html
@@ -76,21 +76,21 @@
                         <img src="../images/speakers/jose-luiz.png" alt="José Luiz" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">José Luiz</h1>
-                    <p class="text-xl text-yellow-400">joselOliveira11@gmail.com</p>
                 </div>
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Malwares & EDRs</h2>
                     <p class="text-lg text-white mb-4">13:30 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma análise aprofundada da relação entre malwares e sistemas EDR (Endpoint Detection and Response), explorando técnicas de detecção, evasão e as últimas tendências em segurança de endpoints.</p>
+                        <p class="mb-6">Nessa palestra vamos estudar as principais técnicas de desenvolvimento de malware focado em Windows, aprendendo como escrever um malware "stealth" e descobrir como as soluções de Antivírus realizam a detecção e classificação do malware.
+                            Vamos abordar técnicas como API unhooking, syscalls diretas e criptografia de código, assinatura de código. Por fim, vamos ver como criar o seu próprio EDR, escrevendo um driver com capacidade de injeção de DLL e analise de syscalls.</p>
                     </div>
                 </div>
 
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About José Luiz</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">José Luiz é um pesquisador de segurança especializado em análise de malware e resposta a incidentes. Com vasta experiência em investigações forenses, tem ajudado organizações a compreender e mitigar ameaças avançadas.</p>
+                        <p class="mb-6"></p>
                     </div>
                 </div>
             </div>
