--- a/speakers/lucas-reis.html
+++ b/speakers/lucas-reis.html
@@ -76,14 +76,13 @@
                         <img src="../images/speakers/lucas-reis.jpg" alt="Lucas Reis" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Lucas Reis</h1>
-                    <p class="text-xl text-yellow-400">lucas_reis.lr@bb.com.br</p>
                 </div>
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Visualização de modelos de machine learning não-supervisionados baseados em distância para detecção de anomalias</h2>
                     <p class="text-lg text-white mb-4">11:10 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma abordagem inovadora para visualização e compreensão de modelos de machine learning não-supervisionados aplicados à detecção de anomalias em segurança da informação.</p>
+                        <p class="mb-6">Enxergue a geometria da detecção de anomalias baseada em distâncias, veja sua implementação, e vislumbre suas aplicações e limitações.</p>
                     </div>
                 </div>
 
