--- a/speakers/lucas-zanoni.html
+++ b/speakers/lucas-zanoni.html
@@ -73,24 +73,23 @@
             <div class="max-w-4xl mx-auto bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
                 <div class="text-center mb-12">
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
-                        <img src="../images/speakers/default-avatar.png" alt="Marcelo Almeida" class="w-full h-full object-cover">
+                        <img src="../images/speakers/lucas-zanoni.jpg" alt="Lucas Zanoni" class="w-full h-full object-cover">
                     </div>
-                    <h1 class="text-4xl font-bold text-white mb-2">Marcelo Almeida</h1>
-                    <p class="text-xl text-yellow-400">Security Engineer</p>
+                    <h1 class="text-4xl font-bold text-white mb-2">Lucas Zanoni</h1>
                 </div>
 
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Segurança em Aplicações Serverless</h2>
-                    <p class="text-lg text-white mb-4">14:40 - Palco Principal</p>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Da Análise ao Ataque: Usando Data Science para Antecipar Ameaças</h2>
+                    <p class="text-lg text-white mb-4">11:10 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma análise profunda sobre os desafios e melhores práticas de segurança em arquiteturas serverless, incluindo configuração, monitoramento e proteção de funções.</p>
+                        <p class="mb-6">Nesta palestra, vamos explorar como usar Data Science para antecipar ameaças cibernéticas. Vamos ver como modelos preditivos, como redes neurais e árvores de decisão, ajudam a detectar comportamentos suspeitos antes que se tornem problemas. Também vamos discutir a integração dessas soluções com ferramentas como SIEM e SOAR, e compartilhar casos práticos.</p>
                     </div>
                 </div>
 
                 <div>
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Marcelo Almeida</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Lucas Reis</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Marcelo Almeida é um engenheiro de segurança especializado em arquiteturas serverless e cloud-native. Com experiência em grandes projetos de transformação digital, tem ajudado organizações a implementar segurança em ambientes modernos de computação.</p>
+                        <p class="mb-6">Lucas Reis é um pesquisador de segurança especializado em aplicações web e APIs. Com vasta experiência em pentest e desenvolvimento seguro, tem contribuído para a melhoria da segurança em diversas organizações.</p>
                     </div>
                 </div>
             </div>
