--- a/speakers/luiz-custodio.html
+++ b/speakers/luiz-custodio.html
@@ -76,21 +76,22 @@
                         <img src="../images/speakers/luiz-custodio.jpg" alt="Luiz Custódio" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Luiz Custódio</h1>
-                    <p class="text-xl text-yellow-400">Security Engineer</p>
                 </div>
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">AppSec Nightmares - Defeating Secure Code Review GPT Hallucinations</h2>
                     <p class="text-lg text-white mb-4">14:20 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma exploração das limitações e desafios no uso de IA para revisão de código seguro, com foco em como identificar e superar as "alucinações" dos modelos GPT em análises de segurança.</p>
+                        <p class="mb-6">À medida que as inteligências artificiais generativas ganham espaço no desenvolvimento de software, muitas empresas optam por bloquear seu uso, temendo o surgimento de vulnerabilidades. Mas será que essa é realmente a melhor estratégia? Nesta palestra, vamos explorar o impacto das IAs no processo de revisão de código seguro, analisando os riscos e as falhas que podem surgir – as chamadas "alucinações" – e como elas afetam diretamente a segurança das aplicações.
+                            Com base em pesquisas e exemplos práticos, vamos revelar o quanto os LLMs  podem gerar código inseguro quando variáveis e funções possuem nomes confusos ou enganosos. Ao mesmo tempo, mostraremos que, quando bem utilizados, esses modelos podem ser aliados poderosos na busca por vulnerabilidades e na promoção de uma cultura de AppSec.
+                            Prepare-se para uma análise crítica das limitações dos LLMs, aprenda a identificar seus pontos cegos e descubra como transformar essas ferramentas de IA em verdadeiros parceiros na construção de código mais seguro. Se você trabalha com desenvolvimento, segurança de aplicações ou está interessado na interseção entre IA e AppSec, esta talk é para você.</p>
                     </div>
                 </div>
 
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Luiz Custódio</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Luiz Custódio é um engenheiro de segurança com vasta experiência em projetos de segurança.</p>
+                        <p class="mb-6">Doutor em Ciência da Computação pela Universidade Estadual de Maringá, com experiência em pesquisa e educação na área de segurança de aplicações. Na Conviso, lidera a área de educação e comunidade, promovendo práticas de desenvolvimento seguro. Também integra o MannaTeam, maior ecossistema de pesquisa em IoT do Paraná.</p>
                     </div>
                 </div>
             </div>
