--- a/speakers/zoziel-freire.html
+++ b/speakers/zoziel-freire.html
@@ -83,14 +83,17 @@
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Ransomware vs EDR: Inside the Mind of Attackers</h2>
                     <p class="text-lg text-white mb-4">12:10 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma análise profunda das técnicas utilizadas por atacantes para burlar sistemas EDR em ataques de ransomware, incluindo análises detalhadas de casos reais e estratégias de proteção.</p>
+                        <p class="mb-6">Como grande objetivo, irei demonstrar que nem tudo que os EDRs se propõe a fazer eles realmente fazem. Durante toda minha pesquisa foi possível construir um ransomware para MacOS e Windows capaz de executar criptografia de arquivos, bem como persistência, troca de wallpapper, comunicação com C2 e faz bypass qualquer detecção/Bloqueio de alguns EDRs conhecidos.</p>
                     </div>
                 </div>
 
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Zoziel Freire</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Zoziel Freire é um especialista em segurança da informação.</p>
+                        <p class="mb-6">Zoziel Freire é formado em Sistemas de Informação e pós-graduado em Computação Forense. Com mais de 16 anos de experiência na área de Tecnologia da Informação, tive a oportunidade de prestar serviços a diversas empresas de diferentes segmentos no Brasil e em outros países.
+
+                            Ao longo da minha carreira, adquiri sólida experiência em Resposta a Incidentes, Análise Forense, Threat Hunting, Análise e Desenvolvimento de Malware, e Engenharia Reversa. Também atuei em incidentes de Ransomware, tanto no Brasil quanto em outros países.
+                            Tenho contribuído ativamente para a comunidade de segurança da informação, participando de eventos como Bsides-Vitória, Bsides-São Paulo, BHack, HackBahia, CajuSEC e OWASP Latam. Sou apaixonado por música, especialmente por violão, guitarra e piano, e sou fã de Chaves e Chapolin.</p>
                     </div>
                 </div>
             </div>
