--- a/speakers/lucas-carmo.html
+++ b/speakers/lucas-carmo.html
@@ -76,21 +76,20 @@
                         <img src="../images/speakers/lucas-carmo.jpeg" alt="Lucas Carmo" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Lucas Carmo</h1>
-                    <p class="text-xl text-yellow-400">lucas@hakaisecurity.io</p>
                 </div>
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">The Shadow Behind Red Team Radiance</h2>
                     <p class="text-lg text-white mb-4">11:10 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma exploração profunda das técnicas avançadas de Red Team, revelando aspectos menos conhecidos e estratégias inovadoras para testes de penetração. A palestra traz uma perspectiva única sobre metodologias de ataque e defesa.</p>
+                        <p class="mb-6">Nesta palestra, vamos explorar como o time Delta7 da Hakai Security atua no suporte à criação de ferramentas, gadgets, 0days exploits e entre outros para operações de Red Team. Vamos apresentar gadgets criados para invasão desde redes Wi-Fi, até 0days para serem utilizados em operações. O foco será mostrar a importância de construir soluções sob medida para maximizar a eficiência, a furtividade e o sucesso das operações, destacando o papel essencial da colaboração entre pesquisadores e operadores.</p>
                     </div>
                 </div>
 
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Lucas Carmo</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Lucas Carmo é um especialista em segurança cibernética com experiência em testes de penetração e análise de vulnerabilidades.</p>
+                        <p class="mb-6"></p>
                     </div>
                 </div>
             </div>
