--- a/speakers/heitor-gouvea.html
+++ b/speakers/heitor-gouvea.html
@@ -71,11 +71,11 @@
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
                         <img src="../images/speakers/heitor-gouvea.jpeg" alt="Heitor Gouvea" class="w-full h-full object-cover">
                     </div>
-                    <h1 class="text-4xl font-bold text-white mb-2">Heitor Gouvea</h1>
+                    <h1 class="text-4xl font-bold text-white mb-2">Heitor Gouvêa</h1>
                 </div>
 
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">An approach of FBP for rapid development of offensive security tools</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Playing with Brazilian fintechs apps 4fun and profit</h2>
                     <p class="text-lg text-white mb-4">10:20 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
                         <p class="mb-6">Uma abordagem inovadora para o desenvolvimento rápido de ferramentas de segurança ofensiva usando Flow-Based Programming (FBP).</p>
@@ -91,9 +91,9 @@
                 </div>
 
                 <div>
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Heitor Gouvea</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Heitor Gouvêa</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Heitor Gouvea Pesquisador Independente de Segurança com background em Engenharia de Software, focado na descoberta de vulnerabilidades e desenvolvimento de exploits.</p>
+                        <p class="mb-6">Heitor Gouvêa é um Pesquisador Independente de Segurança com background em Engenharia de Software, focado na descoberta de vulnerabilidades e desenvolvimento de exploits.</p>
                     </div>
                 </div>
             </div>
