--- a/speakers/iago-blambila.html
+++ b/speakers/iago-blambila.html
@@ -94,7 +94,7 @@
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Iago Blambila (@k0h4d0)</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6"></p>
+                        <p class="mb-6">Consultor em Forense Digital com 4 anos de experiência, atuando em projetos como Resposta a Incidentes, Perícia Criminal, Assistência Técnica e Perícia Judicial. Especialista na resolução de casos técnicos, com ênfase na análise de ações através das estruturas de sistemas operacionais e sistemas de arquivos. Entusiasta da descoberta e correlação de novos artefatos forenses através da segurança ofensiva.</p>
                     </div>
                 </div>
             </div>
