--- a/speakers/pedro-sydenstricker.html
+++ b/speakers/pedro-sydenstricker.html
@@ -82,7 +82,14 @@
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Privacidade, open-source e descentralização: Nym mixnet e a próxima geração de infraestrutura de privacidade</h2>
                     <p class="text-lg text-white mb-4">13:30 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma exploração da tecnologia Nym mixnet e seu papel na construção de uma infraestrutura de privacidade descentralizada e open-source para a próxima geração da internet.</p>
+                        <p class="mb-6">Nesse talk, estaremos abordando como a exposição estrutural dos metadados na arquitetura atual da internet é uma vulnerabilidade que nega aos usuários o exercício da privacidade no acesso digital. 
+
+                            Partindo do princípio que a internet está quebrada, mostraremos como os metadados são usados para gerar receita de mercado e vigilância política, explanando ainda os limites das principais tecnologias de promoção de privacidade atuais (VPN's e Tor). 
+                            
+                            Assim, falaremos do projeto Nym mixnet e como essa arquitetura de camada 0, descentralizada e de código-aberto, é uma possibilidade para promover privacidade num molde web3. 
+                            
+                            Por fim, falaremos da NymVPN e do programa de delegação, que é um incentivo financeiro para gestores autônomos subirem e gerirem parte da infraestrutura da Nym.
+                            </p>
                     </div>
                 </div>
 
