update jose luiz

--- a/speakers/jose-luiz.html
+++ b/speakers/jose-luiz.html
@@ -90,7 +90,7 @@
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About José Luiz</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6"></p>
+                        <p class="mb-6">Pentester, pesquisador de vulnerabilidades de CPU, apaixonado por low level</p>
                     </div>
                 </div>
             </div>
