--- a/speakers/lucas-carmo.html
+++ b/speakers/lucas-carmo.html
@@ -89,7 +89,7 @@
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Lucas Carmo</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6"></p>
+                        <p class="mb-6">Nove anos de experiência em segurança ofensiva, possuo certificações como GIAC Mobile Device Security Analyst, Offensive Security Wireless Professional, Offensive Security Web Expert. Sou apaixonado por pesquisa de vulnerabilidades, tendo mais de 20 CVEs em diversos fornecedores, como Trend Micro, PRTG, Nagios, 3CX, Centreon, entre outros. Além disso, contribuí para o desenvolvimento da interface web do ReconFTW e fui reconhecido pela Trend Micro para o hall da fama de 2025.</p>
                     </div>
                 </div>
             </div>
