--- a/speakers/heitor-gouvea.html
+++ b/speakers/heitor-gouvea.html
@@ -75,10 +75,10 @@
                 </div>
 
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Playing with Brazilian fintechs apps 4fun and profit</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Automatic detection of fake profiles on social networks</h2>
                     <p class="text-lg text-white mb-4">10:20 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma abordagem inovadora para o desenvolvimento rápido de ferramentas de segurança ofensiva usando Flow-Based Programming (FBP).</p>
+                        <p class="mb-6">Nesta palestra será discutido a atual problematica ao redor de perfis falsos em redes sociais (que são usados para SPAM, fraudes financeiras e diversas outras situações de impacto negativos) e uma demonstração de algoritmo para detecção automática destes perfis. Será apresentado um estudo de caso aplicado no Instagram, mas as premissas básicas podem ser aplicadas em outros contextos que são semelhantes.</p>
                     </div>
                 </div>
 
