--- a/speakers/rodrigo-ferreira.html
+++ b/speakers/rodrigo-ferreira.html
@@ -75,7 +75,7 @@
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
                         <img src="../images/speakers/rodrigo-laneth.jpeg" alt="Rodrigo Ferreira" class="w-full h-full object-cover" onerror="this.src='../images/speakers/default-avatar.png'">
                     </div>
-                    <h1 class="text-4xl font-bold text-white mb-2">Rodrigo Ferreira</h1>
+                    <h1 class="text-4xl font-bold text-white mb-2">Rodrigo Laneth</h1>
                 </div>
 
                 <div class="mb-12">
