--- a/speakers/abid-lohan.html
+++ b/speakers/abid-lohan.html
@@ -77,6 +77,7 @@
                             class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Abid Lohan</h1>
+                    https://www.linkedin.com/in/abid-lohan/" class="text-lg text-white">https://www.linkedin.com/in/abid-lohan/</a>
                 </div>
 
                 <div class="mb-12">
