--- a/speakers/jefferson-macedo.html
+++ b/speakers/jefferson-macedo.html
@@ -75,7 +75,8 @@
                         <img src="../images/speakers/jefferson-macedo.png" alt="Jefferson Macedo"
                             class="w-full h-full object-cover">
                     </div>
-                    <h1 class="text-4xl font-bold text-white mb-2">Jefferson Macedo</h1>
+                    <h1 class="text-4xl font-bold text-white mb-2">Jefferson Macedo (Jeff)</h1>
+                    <a href="https://www.linkedin.com/in/jeffersonsmacedo" class="text-lg text-white">https://www.linkedin.com/in/jeffersonsmacedo</a> 
                 </div>
 
                 <div class="mb-12">
