--- a/speakers/lucas-carmo.html
+++ b/speakers/lucas-carmo.html
@@ -75,7 +75,8 @@
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
                         <img src="../images/speakers/lucas-carmo.jpeg" alt="Lucas Carmo" class="w-full h-full object-cover">
                     </div>
-                    <h1 class="text-4xl font-bold text-white mb-2">Lucas Carmo</h1>
+                    <h1 class="text-4xl font-bold text-white mb-2">Lucas Carmo (Luriel)</h1>
+                    <a href="https://www.linkedin.com/in/lucasscarmo/" class="text-lg text-white">https://www.linkedin.com/in/lucasscarmo/</a>   
                 </div>
 
                 <div class="mb-12">
