--- a/speakers/lucas-reis.html
+++ b/speakers/lucas-reis.html
@@ -76,6 +76,7 @@
                         <img src="../images/speakers/lucas-reis.jpg" alt="Lucas Reis" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Lucas Reis</h1>
+                    <a href="https://www.linkedin.com/in/lucasgribeldosreis/" class="text-lg text-white">https://www.linkedin.com/in/lucasgribeldosreis/</a> 
                 </div>
 
                 <div class="mb-12">
