--- a/speakers/lucas-zanoni.html
+++ b/speakers/lucas-zanoni.html
@@ -76,6 +76,7 @@
                         <img src="../images/speakers/lucas-zanoni.jpg" alt="Lucas Zanoni" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Lucas Zanoni</h1>
+                    <a href="https://www.linkedin.com/in/lucas-zanoni-135322125/" class="text-lg text-white">https://www.linkedin.com/in/lucas-zanoni-135322125/</a>     
                 </div>
 
                 <div class="mb-12">
