--- a/speakers/luiz-custodio.html
+++ b/speakers/luiz-custodio.html
@@ -76,6 +76,7 @@
                         <img src="../images/speakers/luiz-custodio.jpg" alt="Luiz Custódio" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Luiz Custódio</h1>
+                    <a href="https://www.linkedin.com/in/luhenrique/" class="text-lg text-whit   e">https://www.linkedin.com/in/luhenrique/</a>             
                 </div>
 
                 <div class="mb-12">
