--- a/speakers/heitor-gouvea.html
+++ b/speakers/heitor-gouvea.html
@@ -72,6 +72,7 @@
                         <img src="../images/speakers/heitor-gouvea.jpeg" alt="Heitor Gouvea" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Heitor Gouvêa</h1>
+                    <a href="https://linkedin.com/in/htrgouvea" class="text-lg text-white">https://linkedin.com/in/htrgouvea</a>
                 </div>
 
                 <div class="mb-12">
