--- a/speakers/iago-blambila.html
+++ b/speakers/iago-blambila.html
@@ -76,6 +76,7 @@
                             class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Iago Blambila (@k0h4d0)</h1>
+                    <a href="https://www.linkedin.com/in/iagoblam/" class="text-lg text-white">https://www.linkedin.com/in/iagoblam/</a>     
                 </div>
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">The Darkside of the Moon - How to Really Think
