--- a/speakers/jose-luiz.html
+++ b/speakers/jose-luiz.html
@@ -76,6 +76,7 @@
                         <img src="../images/speakers/jose-luiz.png" alt="José Luiz" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">José Luiz</h1>
+                    <a href="https://www.linkedin.com/in/jos%C3%A9-oliveira-83534b2a7/" class="text-lg text-white">https://www.linkedin.com/in/jos%C3%A9-oliveira-83534b2a7/</a>
                 </div>
 
                 <div class="mb-12">
