--- a/speakers/pedro-sydenstricker.html
+++ b/speakers/pedro-sydenstricker.html
@@ -75,7 +75,8 @@
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
                         <img src="../images/speakers/pedro-sydenstricker.jpg" alt="Pedro Sydenstricker" class="w-full h-full object-cover">
                     </div>
-                    <h1 class="text-4xl font-bold text-white mb-2">Pedro Sydenstricker</h1>
+                    <h1 class="text-4xl font-bold text-white mb-2">Pedro Sydenstricker (psydenst)</h1>
+                    <a href="https://www.linkedin.com/in/pedrosydenstricker/" class="text-lg text-white">https://www.linkedin.com/in/pedrosydenstricker/</a> 
                 </div>
 
                 <div class="mb-12">
