--- a/speakers/rodrigo-ferreira.html
+++ b/speakers/rodrigo-ferreira.html
@@ -76,6 +76,7 @@
                         <img src="../images/speakers/rodrigo-laneth.jpeg" alt="Rodrigo Ferreira" class="w-full h-full object-cover" onerror="this.src='../images/speakers/default-avatar.png'">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Rodrigo Laneth</h1>
+                    <a href="https://www.linkedin.com/in/rlaneth" class="text-lg text-white">https://www.linkedin.com/in/rlaneth</a> 
                 </div>
 
                 <div class="mb-12">
