--- a/speakers/zoziel-freire.html
+++ b/speakers/zoziel-freire.html
@@ -76,6 +76,7 @@
                         <img src="../images/speakers/zoziel-freire.jpg" alt="Zoziel Freire" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Zoziel Freire</h1>
+                    <a href="https://www.linkedin.com/in/zozielfreire" class="text-lg text-white">https://www.linkedin.com/in/zozielfreire</a> 
                 </div>
 
                 <div class="mb-12">
